# Flam

./: README.md  settings.gradle.kts
OpenCV/: build.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/testapp/: CameraHelper.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
gl/: build.gradle.kts
gl/src/androidTest/java/com/example/gl/: ExampleInstrumentedTest.kt
gl/src/main/java/com/example/gl/: GLRenderer.kt  GLTextureHelper.kt
gl/src/test/java/com/example/gl/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: build.gradle.kts
jni/src/androidTest/java/com/example/jini/: ExampleInstrumentedTest.kt
jni/src/main/cpp/: CMakeLists.txt  jni.cpp
jni/src/test/java/com/example/jini/: ExampleUnitTest.kt
web/: index.html  package.json  style.css  tsconfig.json
web/src/: main.ts  utils.ts
